Add another --add-opens to readme that was missing before
Closes #4